--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
     "react-spring": "^9.1.2",
+    "react-spring-carousel-js": "^1.9.9",
     "react-use-gesture": "^9.1.3",
     "react-use-measure": "^2.0.4"
   },
